--- a/views/report.pug
+++ b/views/report.pug
@@ -1,4 +1,4 @@
-extends layout 
+extends layout
 
 block main-content 
   h1.page-title COVID Report for all of #{report.data[0].region.province}, #{report.data[0].region.name}
@@ -14,24 +14,13 @@ block main-content
 
     h2 Map: 
     div#map(style="height:500px;")
-    script.
-    function initMap() {
-      const map = new google.maps.Map(document.getElementById("map"), {
-        center: { lat: #{report.data[0].region.lat}, lng: #{report.data[0].region.long} },
-        zoom: 8,
-      });
-      const marker = new google.maps.Marker({
-        position: { lat: #{report.data[0].region.lat}, lng: #{report.data[0].region.long} },
-        map: map,
-      });
-    }
 
-  p
-    b Latitude: 
-    #{report.data[0].region.lat}
-  p
-    b Longitude: 
-    #{report.data[0].region.long}
+  //- p
+  //-   b Latitude: 
+  //-   #{report.data[0].region.lat}
+  //- p
+  //-   b Longitude: 
+  //-   #{report.data[0].region.long}
 
   //- h2 COVID reports for select cities within #{report.data[0].region.province}, #{report.data[0].region.name}
   //- ul
