Comment out unused code

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,7 @@ html
     title #{title} | COVID-19 Report App
     block scripts 
       link(rel="stylesheet", type="text/css", href="/styles.css")
-      script(src=`https://maps.googleapis.com/maps/api/js?key=${gMapsApiKey}&callback=initMap`)
+      //- script(src=`https://maps.googleapis.com/maps/api/js?key=${gMapsApiKey}&callback=initMap`)
   body
     header#header 
       .header-content   
