--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,141 @@
+/* General styles */
+
 body {
-  font-family:'Trebuchet MS', Trebuchet, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: "SF Pro Display", "Segoe UI", "Roboto", sans-serif;
+  font-size: 16px;
+  background-color: #f2f2f7;
+  color: #1c1c1e;
+}
+
+/* Header */
+
+#header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  background-color: #007aff;
+  border-radius: 50px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+#header a {
+  font-size: 24px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  text-decoration: none;
+  color: #fff;
+}
+
+#header a:hover {
+  text-decoration: underline;
+}
+
+/* Main */
+
+#main {
+  margin: 50px auto;
+  padding: 50px;
+  max-width: 800px;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 50px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.page-title {
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 30px;
+  text-align: center;
+  color: #007aff;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+select {
+  font-size: 18px;
+  padding: 15px;
+  width: 100%;
+  margin-bottom: 30px;
+  color: #777;
+  background-color: rgba(0, 0, 0, 0.05);
+  border: none;
+  border-radius: 20px;
+  appearance: none;
+}
+
+select:focus {
+  outline: none;
+  border-color: #007aff;
+}
+
+input[type="submit"] {
+  font-size: 18px;
+  padding: 15px 20px;
+  background-color: #007aff;
+  color: #fff;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+input[type="submit"]:hover {
+  background-color: #0055ff;
+}
+
+.report-data-wrapper {
+  margin: 20px auto;
+  font-size: 24px;
+  color: #555;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.report-data {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin-bottom: 10px;
+}
+
+.report-data b {
+  font-weight: bold;
+  color: #007aff;
+  margin-right: 10px;
+  text-align: left;
+  width: 50%;
+}
+
+/* Centre Google Maps */
+
+iframe[src^="https://www.google.com/maps"]
+{
+  display: block;
+  margin: 0 auto;
+  border-radius: 20px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Footer */
+
+#footer {
+  padding: 20px;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 50px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+  padding: 20px;
+  text-align: center;
+  border-radius: 50px;
+}
+
+#footer p {
+  margin: 0;
+  font-size: 12px;
 }
