--- a/views/index.pug
+++ b/views/index.pug
@@ -1,10 +1,35 @@
-extends layout 
+extends layout
 
-block main-content 
+block main-content
   h1.page-title List of Countries and Regions
-  h2 Please select a country
-  ul
-    each c in countries.data
-      li 
-        - let url = `/provinces?regionIso=${c.iso}`
-        a(href=url) #{c.name}
+  h2 Please select a country or region
+  //- Country/region selection form
+  form(action="/" method="get" id="region-form")
+    select(name="regionIso", onchange="submitForm();")
+      each r in regions
+        - if (!regions.includes(r.region.name))
+          //- Check if regionIso matches current region.iso value
+          if (regionIso && regionIso === r.region.iso)
+            option(value=r.region.iso selected) #{r.region.name}
+          else
+            option(value=r.region.iso) #{r.region.name}
+          - regions.push(r.region.name)
+  //- Area selection form
+  if areas && areas.length > 0
+    form(action="/report" method="get" id="area-form")
+      select(name="area")
+        each a in areas
+          option(value=a.region.province) #{a.region.province}
+      input(type="hidden" name="regionIso" value=regionIso)
+      input(type="submit" value="Get Report")
+
+  script.
+    const form = document.getElementById('area-form');
+    const select = form.querySelector('select');
+    const options = select.querySelectorAll('option');
+    const nullOptions = Array.from(options).filter(option => !option.value.trim()).length;
+    const nonNullOptions = options.length - nullOptions;
+
+    if (nonNullOptions <= 2 && nullOptions > 0) {
+        form.submit();
+    }
