Remove script for google maps, add copy rights

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,6 @@ html
     title #{title} | COVID-19 Report App
     block scripts 
       link(rel="stylesheet", type="text/css", href="/styles.css")
-      //- script(src=`https://maps.googleapis.com/maps/api/js?key=${gMapsApiKey}&callback=initMap`)
   body
     header#header 
       .header-content   
@@ -16,3 +15,5 @@ html
       block main-content 
     footer#footer 
       p &copy; Copyright Kee-Fung Anthony Ho, 2023.
+      p COVID-19 API data from: https://covid-api.com/
+      p Google Maps data from: Google
