--- a/views/index.pug
+++ b/views/index.pug
@@ -27,29 +27,6 @@ block main-content
           option(value=a.region.province) #{a.region.province}
       input(type="hidden" name="regionIso" value=regionIso)
       input(type="submit" value="Get Report" disabled)
-  
-  //- JavaScript for ensuring if user changes regionIso, it won't submit for a report
-  //- Ensures to show the area options that aren't cities and if there are only 1-2 options, generally, the country only has data over the entity that is the country itself, so it will auto submit the form for a report.
-  script.
-    const submitForm = () => {
-      const form = document.getElementById("region-form");
-      form.submit();
-    }
 
-    const areaSelect = document.getElementById("area-select");
-    areaSelect.addEventListener("change", () => {
-      const submitBtn = document.querySelector('#area-form input[type="submit"]');
-      submitBtn.disabled = areaSelect.value === "";
-    });
-
-    const form = document.getElementById("area-form");
-    const select = form.querySelector('select');
-    const options = select.querySelectorAll("option");
-    const nullOptions = Array.from(options).filter(option => !option.value.trim()).length;
-    const nonNullOptions = options.length - nullOptions;
-    //- If the options in area-dropdown menu has less than or equal 2 and if there's at least one null option, auto submit since it likely only has data on the entire country/region itself.
-    if (nonNullOptions <= 2 && nullOptions > 0) {
-        const submitBtn = document.querySelector('#area-form input[type="submit"]');
-        submitBtn.disabled = false;
-        form.submit();
-    }
+  //- JavaScript for index.pug
+  script(type="text/javascript", src="/script.js")
